# SvrCallImageEngineCMake

./: .gitignore  CMakeLists.txt  SvrCallImageEngineCMake.cpp  SvrCallImageEngineCMake.h
src/: CMakeLists.txt  auto_generate.sh  generate_dicom_engine.sh  main.cpp
src/DicomEngine/: CMakeLists.txt
src/DicomEngine/api/: api.h  studycontextmy.cpp  studycontextmy.h
src/DicomEngine/api/dicom/: idicom.cpp  idicommanager.h
src/DicomEngine/io/: ct_image_generator.h  ct_image_storage_sop_generator.cpp  dicom_attribute.h  dicom_writer_dcmtk.cpp  dicom_writer_dcmtk.h  idicom_writer.h  igenerator.cpp  igenerator.h  img_source.h  secondary_capture_image_generator.cpp  secondary_capture_image_generator.h
src/DicomEngine/iod/: ct_image_module.h  frame_of_reference_module.h  general_equipment_module.h  general_image_module.h  general_series_module.h  general_study_module.h  get_set.h  image_pixel_module.h  image_plane_module.h  meta_info_module.h  modality_lut_module.h  module.h  patient_module.h  patient_study_module.h  sc_equipment_module.h  sc_image_module.h  sop_common_module.h  voi_lut_module.h
src/DicomEngine/main/controllers/: dicommanager.cpp  dicommanager.h
src/EngineController/: CMakeLists.txt  Controller.cpp  Controller.h  common_utils.cpp  common_utils.h  data_transfer_control.cpp  data_transfer_control.h  dcmtk_dcm_loader.cpp  dcmtk_dcm_loader.h  ginkgouid.cpp  ginkgouid.h  image_process.cpp  image_process.h  img_source.h  series_data_info.cpp  series_data_info.h
src/ImagingEngineLib/: CMakeLists.txt  curve_source.cpp  render_facade.cpp  render_source.cpp
src/ImagingEngineLib/batch/: CMakeLists.txt  batch_generator_cpr.cpp  batch_generator_mpr.cpp  batch_generator_vr.cpp  batch_image_source.cpp
src/ImagingEngineLib/bitmap/: BasicBitmap.cpp  CMakeLists.txt  bitmap.cpp  bitmap_info.cpp
src/ImagingEngineLib/control/: CMakeLists.txt  image_control_2d.cpp  image_control_3d.cpp
src/ImagingEngineLib/data/: CMakeLists.txt  aabb.cpp  anatomical_plane.cpp  camera.cpp  curve_line.cpp  data_loader.cpp  image_orientation.cpp  image_plane.cpp  light.cpp  patient_orientation.cpp  pixel_data.cpp  show_buffer.cpp  vol_data.cpp  window_level.cpp
src/ImagingEngineLib/exception/: iexception.cpp
src/ImagingEngineLib/filter/: CMakeLists.txt  frenet_serret_frame.cpp  manual_orientation_markder_widget.cpp  spline_driven_image_slicer.cpp
src/ImagingEngineLib/include/: curve_source.h  render_facade.h  render_source.h  vtk_include.h
src/ImagingEngineLib/include/actor/: actor_3d.h  rotate_cpr.h  rotate_vr.h
src/ImagingEngineLib/include/batch/: batch_generator.h  batch_generator_cpr.h  batch_generator_mpr.h  batch_generator_vr.h  batch_image_source.h
src/ImagingEngineLib/include/bitmap/: BasicBitmap.h  bitmap.h  bitmap_info.h  ibitmap.h  ibitmap_info.h
src/ImagingEngineLib/include/builder/: imaging_builder_3d.h  imaging_builder_cpr.h  imaging_builder_mpr.h  imaging_builder_vr.h
src/ImagingEngineLib/include/control/: image_control.h  image_control_2d.h  image_control_3d.h
src/ImagingEngineLib/include/data/: aabb.h  annotation_storage.h  box3.h  camera.h  common.h  curve_line.h  data_definition.h  data_loader.h  image_orientation.h  image_plane.h  image_source.h  light.h  pixel_data.h  pixel_spacing_2d.h  render_mode.h  show_buffer.h  vector2.h  vector3.h  vol_data.h  window_level.h
src/ImagingEngineLib/include/data/IOD/: iod.h
src/ImagingEngineLib/include/exception/: data_exception.h  iexception.h  render_exception.h
src/ImagingEngineLib/include/filter/: manual_orientation_marker_widget.h
src/ImagingEngineLib/include/io/: dcm_reader.h  nii_loader.h  txt_reader.h
src/ImagingEngineLib/include/orientation/: orientation_interpreter.h  orientation_marker.h
src/ImagingEngineLib/include/processing/: image_process.h  image_transform.h  image_transform_opencv.h  stored_value_transform.h  voi_lut.h
src/ImagingEngineLib/include/render/: imaging_3d.h  imaging_cpr.h  imaging_mpr.h  imaging_vr.h  orientation_3d.h  render_param.h  render_param_cpr.h  render_param_mpr.h  render_param_vr.h  renderer_3d.h  renderer_cpr.h  renderer_mpr.h  renderer_mpr_vtk.h  renderer_straightened_cpr.h  renderer_stretched_cpr.h  renderer_vr.h  transfer_function.h  transfer_function_color.h  transfer_function_opacity.h  transfer_function_template.h
src/ImagingEngineLib/include/thread/: thd.h
src/ImagingEngineLib/include/tools/: configurations.h  dicom_format_converter.h  function.h  math.h  path.h  string_util.h
src/ImagingEngineLib/io/: CMakeLists.txt  nii_loader.cpp
src/ImagingEngineLib/orientation/: CMakeLists.txt  orientation_interpreter.cpp  orientation_marker.cpp
src/ImagingEngineLib/processing/: CMakeLists.txt  image_process.cpp  image_transform_opencv.cpp  stored_value_transform.cpp  voi_lut.cpp
src/ImagingEngineLib/render/: CMakeLists.txt  imaging_3d.cpp  imaging_cpr.cpp  imaging_mpr.cpp  imaging_vr.cpp  render_param_vr.cpp  renderer_3d.cpp  renderer_cpr.cpp  renderer_mpr.cpp  renderer_mpr_vtk.cpp  renderer_straightened_cpr.cpp  renderer_stretched_cpr.cpp  renderer_vr.cpp  transfer_function.cpp  transfer_function_color.cpp  transfer_function_opacity.cpp
src/ImagingEngineLib/thread/: CMakeLists.txt  thd.c
src/ImagingEngineLib/tools/: CMakeLists.txt  configurations.cpp  convert_vtk_image_data_to_rgba.cpp  math.cpp
src/SvrJava/: com_deepwise_cta_component_rebuild_SvrCallImageEngine.cpp
src/SvrJava/com/deepwise/cta/component/rebuild/: SvrCallImageEngine.java
src/common_utils/: common_header.h  global_define.h
src/tools/: logger.h  path.h
